--- a/Website (Node and HBS)/views/layouts/main.hbs
+++ b/Website (Node and HBS)/views/layouts/main.hbs
@@ -6,6 +6,7 @@
     <title>Tickets</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
     <link rel="stylesheet" type="text/css" href="/styles.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 </head>
 <body>
 <header>
