--- a/Website (Node and HBS)/views/index.hbs
+++ b/Website (Node and HBS)/views/index.hbs
@@ -4,6 +4,6 @@
 <aside>
     <h2>Upcoming Events</h2>
     {{#each events}}
-        <li><a href="events/{{this.artist.key}}/{{this.tour.key}}">{{this.artist.label}}: {{this.tour.label}}</a></li>
+        <li><a href="events/">{{this.artist_name}}: {{this.tour_name}}</a></li>
     {{/each}}
 </aside>
