--- a/Website (Node and HBS)/public/styles.css
+++ b/Website (Node and HBS)/public/styles.css
@@ -14,3 +14,46 @@
     height: 50px;
     background-color: turquoise;
 }
+
+.city-card {
+    cursor: pointer;
+    width: 80%;
+    margin: auto;
+    display: grid !important;
+    grid-template-columns: auto auto;
+    padding: 20px;
+    padding-top: 15px;
+}
+
+.city-card:hover {
+    transform: scale(1.1);
+}
+
+.city-card ul {
+    margin: 0;
+}
+
+.city-card main {
+    grid-column: 1 / span 1;
+}
+
+.city-card aside {
+    grid-column: 2 / span 1;
+}
+
+#change-city-popup {
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+/* 
+#filters {
+    display: grid;
+    grid-template-rows: auto auto;
+    justify-content: center;
+    justify-items: center;
+} */
