--- a/Website (Node and HBS)/views/events/purchase/purchase-page.hbs
+++ b/Website (Node and HBS)/views/events/purchase/purchase-page.hbs
@@ -19,22 +19,27 @@
         <button type="button" id="increase-tickets" class="btn btn-outline-primary">+</button>
     </div>
 </form>
-{{!-- <form method="get" id="date-filter">
-    <div class="form-check form-check-inline"></div>
-        {{#each venueDates}}
-            <label>
-                <input type="checkbox" class="form-check-input" name="date" value="{{this.date_id}}">
-                {{formatDate this.date 'do LLLL'}}
-            </label>
-        {{/each}}
-    </div>
-    <button type="submit" disabled>Update</button>
+
+<form action="/events/create-checkout-session" method="POST">
+    <button class="btn btn-primary">
+        Purchase
+    </button>
 </form>
-<form method="get" id="number-of-tickets">
-    <button type="button" id="decrease-tickets">-</button>
-    <input type="number" name="quantity" value="2">
-    <button type="button" id="increase-tickets">+</button>
-</form> --}}
+
+
+{{!-- #each availableRows or smth --}}
+
+<div class="card available-ticket-card container p-3">
+    <div class="row mb-1">
+        <button class="col-1 btn btn-outline-secondary p-0 ml-3 mw-80">Details</button>
+        <h3 class="col-8 mb-0">Section X Row X</h3>
+        <p class="col-3 text-end mb-0 align-self-center">Total Price</p>
+    </div>
+    <div class="row mt-1">
+        <p class="col-7 mb-0">date, date, date, date</p>
+        <p class="col-5 mb-0 text-end">price info</p>
+    </div>
+</div>
 
 
 <div id="change-city-popup">
@@ -102,19 +107,20 @@
     let qtyInput = $('input[name="quantity"]')
 
     function increaseQty() {
-        qtyInput.val(parseInt(qtyInput.val()) + 1)
-        if (qtyInput.val() > maxTickets) {qtyInput.val(maxTickets)}
-        if (qtyInput.val() >= maxTickets - 1) $("#increase-tickets").attr("disabled", true)
-        $("#decrease-tickets").attr("disabled", false)
+        const oldVal = qtyInput.val()
+        let newVal = parseInt(qtyInput.val() + 1)
+        if (newVal > maxTickets) newVal = maxTickets
+
+        if (oldVal != newVal) {
+            qtyInput.val(newVal)
+            $("#filters").submit()
+        }
     }
 
     function decreaseQty() {
-        let oldVal = qtyInput.val()
+        const oldVal = qtyInput.val()
         let newVal = parseInt(qtyInput.val()) - 1
-        //qtyInput.val(parseInt(qtyInput.val()) - 1)
         if (newVal < 1) newVal = 1
-        //if (newVal <= 1) $("#decrease-tickets").attr("disabled", true)
-        //$("#increase-tickets").attr("disabled", false)
 
         if (oldVal != newVal) {
             qtyInput.val(newVal)
