taking a more RESTful approach

--- a/Website (Node and HBS)/views/events/purchase/purchase-page.hbs
+++ b/Website (Node and HBS)/views/events/purchase/purchase-page.hbs
@@ -5,8 +5,10 @@
     <div>
         {{#each venueDates}}
             <div class=" form-check form-check-inline">
-                <input type="checkbox" class="form-check-input" id="date-box-{{this.date_id}}" name="date" value="{{this.date_id}}">
-                <label for="date-box-{{this.date_id}}">{{formatDate this.date 'do LLLL'}}</label>
+                <input type="checkbox" class="form-check-input" id="date-check-{{this.date_id}}" name="date" value="{{this.date_id}}">
+                <label for="date-check-{{this.date_id}}">
+                    {{formatDate this.date 'E do LLLL'}}
+                </label>
             </div>
         {{/each}}
     </div>
@@ -14,14 +16,15 @@
     <h3 style="display: inline-block">Tickets</h3>
     <div class="d-flex">
         <button type="button" id="decrease-tickets" class="btn btn-outline-primary">-</button>
-        <input type="number" name="quantity" value="2" hidden>
+        <input type="number" name="qty" value="2" hidden>
         <span id="qty-span" class="card text-center justify-content-center" style="width: 50px"></span>
         <button type="button" id="increase-tickets" class="btn btn-outline-primary">+</button>
     </div>
 </form>
 
-<form action="/events/create-checkout-session" method="POST">
-    <button class="btn btn-primary">
+<form id="purchase-form" action="/events/create-checkout-session" method="POST">
+    <input name="product-ids" hidden value="">
+    <button id="purchase" class="btn btn-primary m-auto">
         Purchase
     </button>
 </form>
@@ -46,92 +49,4 @@
     {{> city-cards}}
 </div>
 
-<script>
-    $(document).ready(function () {
-        $("#change-city-btn").click(toggleCityPopup)
-        $("#change-city-popup").click(toggleCityPopup)
-
-        $(".city-card").click(function () {
-            // if data-venue-id == current venue id then just close popup without going to a new page
-            window.location.href = `/events/purchase/tour/${$(this).attr("data-tour-id")}/venue/${$(this).attr("data-venue-id")}`
-        })
-
-        const params = new URLSearchParams(window.location.search)
-        const qryDates = params.getAll("date")
-
-        if (qryDates.length > 0) {
-            for (let dateID of qryDates) $(`input[name=date][value=${dateID}]`).prop("checked", true)
-
-        } else {
-            $("input[name=date]").prop("checked", true)
-        }
-
-        const qty = params.get("quantity")
-        $("input[name=quantity]").val(!!qty ? qty : 2)
-        $("#qty-span").text(!!qty ? qty : 2)
-        disableQtyBtns()
-
-        // only allow date filter to 
-        $("input[name=date]").on("input", function() {
-            $("#date-filter button[type=submit]").attr("disabled", false)
-        })
-
-        $("#increase-tickets").click(function() {
-            increaseQty()
-        })
-
-        $("#decrease-tickets").click(function() {
-            decreaseQty()
-        })
-
-        $("#filters input").on("input", function() {
-            $("#filters").submit()
-        })
-    })
-
-    function toggleCityPopup() {
-        let popup = $('#change-city-popup')
-
-        switch(popup.css('display')) {
-            case "none":
-                popup.css('display', 'flex')
-                break;
-            default:
-                popup.css('display', 'none')
-        }
-    }
-
-
-    // can store a max quantity in the database for each tour
-    let maxTickets = 4
-    let qtyInput = $('input[name="quantity"]')
-
-    function increaseQty() {
-        const oldVal = qtyInput.val()
-        let newVal = parseInt(qtyInput.val() + 1)
-        if (newVal > maxTickets) newVal = maxTickets
-
-        if (oldVal != newVal) {
-            qtyInput.val(newVal)
-            $("#filters").submit()
-        }
-    }
-
-    function decreaseQty() {
-        const oldVal = qtyInput.val()
-        let newVal = parseInt(qtyInput.val()) - 1
-        if (newVal < 1) newVal = 1
-
-        if (oldVal != newVal) {
-            qtyInput.val(newVal)
-            $("#filters").submit()
-        }
-    }
-
-    function disableQtyBtns() {
-        $("#increase-tickets, #decrease-tickets").attr("disabled", false)
-
-        if (qtyInput.val() <= 1) $("#decrease-tickets").attr("disabled", true)
-        else if (qtyInput.val() >= maxTickets - 1) $("#increase-tickets").attr("disabled", true)
-    }
-</script>
+<script src="/purchase-page.js"></script>
