--- a/Website (Node and HBS)/views/partials/city-cards.hbs
+++ b/Website (Node and HBS)/views/partials/city-cards.hbs
@@ -1,4 +1,4 @@
-{{#each cardContext.datesByVenue}}
+{{#each cardContext.venues}}
     <div 
         class="city-card card" 
         data-tour-id="{{../cardContext.event.tour_id}}"
