changed /api/seats to /api/available-seats, doing the logic for getting required number of available seats

--- a/Website (Node and HBS)/views/events/purchase/purchase-page.hbs
+++ b/Website (Node and HBS)/views/events/purchase/purchase-page.hbs
@@ -49,4 +49,5 @@
     {{> city-cards}}
 </div>
 
-<script src="/purchase-page.js"></script>
+<script src="fetchData.js"></script>
+<script type="module" src="/purchase-page.js"></script> <!--https://stackoverflow.com/a/55310399-->
