--- a/Website (Node and HBS)/views/events/purchase/purchase-page.hbs
+++ b/Website (Node and HBS)/views/events/purchase/purchase-page.hbs
@@ -18,11 +18,16 @@
         <button type="button" id="decrease-tickets" class="btn btn-outline-primary">-</button>
         <input type="number" name="qty" value="2" hidden>
         <span id="qty-span" class="card text-center justify-content-center" style="width: 50px"></span>
-        <button type="button" id="increase-tickets" class="btn btn-outline-primary">+</button>
+        <div>
+            <button type="button" id="increase-tickets" class="btn btn-outline-primary">+</button>
+            <p class="opacity-0">Maximum ticket quantity reached</p>
+        </div>
+        {{!-- <p class="comment">Want to add a lil tooltip when this button is disabled that says max tickets reached or smth</p> --}}
+</button>
     </div>
 </form>
 
-<form id="purchase-form" action="/events/create-checkout-session" method="POST">
+<form id="purchase-form" action="/events/create-checkout-session" method="POST" class="text-center">
     <input name="product-ids" hidden value="">
     <button id="purchase" class="btn btn-primary m-auto">
         Purchase
@@ -31,24 +36,11 @@
 
 <div id="available-tickets"></div>
 
-{{!-- #each availableRows or smth --}}
-
-{{!-- <div class="card available-ticket-card container p-3">
-    <div class="row mb-1">
-        <button class="col-1 btn btn-outline-secondary p-0 ml-3 mw-80">Details</button>
-        <h3 class="col-8 mb-0">Section X Row X</h3>
-        <p class="col-3 text-end mb-0 align-self-center">Total Price</p>
-    </div>
-    <div class="row mt-1">
-        <p class="col-7 mb-0">date, date, date, date</p>
-        <p class="col-5 mb-0 text-end">price info</p>
-    </div>
-</div> --}}
-
-
-<div id="change-city-popup">
+<div id="change-city-modal" class="pi-modal">
     {{> city-cards}}
 </div>
+
+<div id="select-seats-modal" class="pi-modal"></div>
 
 <script src="/js/fetchData.js"></script>
 <script type="module" src="/js/purchase-page.js"></script> <!--https://stackoverflow.com/a/55310399-->
