lot of refactoring. started waiting list signup form - finall got selectpicker working so gonna refactor again

--- a/Website (Node and HBS)/views/events/events.hbs
+++ b/Website (Node and HBS)/views/events/events.hbs
@@ -5,10 +5,12 @@
 <ul>
 {{#each events}}
     <li>
-        <a href="tour/{{this.tour_id}}">
+        <a href="events/tour/{{this.tour_id}}">
             {{this.artist_name}} - {{this.tour_name}}
         </a>
-        <span class="d-block">{{formatDate this.firstDate.date "do LLL ''yy"}} to {{formatDate this.lastDate.date "do LLL ''yy"}}</span>
+        <span class="d-block">
+            {{formatDate this.firstDate.date "do LLL ''yy"}} to {{formatDate this.lastDate.date "do LLL ''yy"}}
+        </span>
     </li>
 {{/each}}
 </ul>
