--- a/Website (Node and HBS)/public/styles.css
+++ b/Website (Node and HBS)/public/styles.css
@@ -67,11 +67,9 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
 }
-
-/* div:hover > #increase-tickets {
-    background-color: pink !important;
-} */
 
 #increase-tickets + p {
     position: fixed;
@@ -92,5 +90,11 @@ div:hover > #increase-tickets:disabled + p {
 /* .available-ticket-card {
     display: grid !important;
     grid-template: auto auto / auto auto auto;
-
 } */
+
+#waiting-list-form {
+    display: grid;
+    grid-template-columns: auto 1fr;
+    padding: 10px;
+    gap: 10px
+}
