--- a/Website (Node and HBS)/public/styles.css
+++ b/Website (Node and HBS)/public/styles.css
@@ -92,9 +92,14 @@ div:hover > #increase-tickets:disabled + p {
     grid-template: auto auto / auto auto auto;
 } */
 
-#waiting-list-form {
-    display: grid;
+#waiting-list-dates {
+    display: inline-grid;
     grid-template-columns: auto 1fr;
     padding: 10px;
-    gap: 10px
+    gap: 10px;
+    align-items: center;
+}
+
+#waiting-list-form * {
+    transition: opacity 0.5s ease-in-out;
 }
