--- a/Website (Node and HBS)/public/views/no-tickets.hbs
+++ b/Website (Node and HBS)/public/views/no-tickets.hbs
@@ -1,6 +1,7 @@
 <h3>No tickets available</h3>
 <p>To be notified when more tickets are available, sign up to the waiting list</p>
-<form id="waiting-list-signup" action="">
-    <p class="comment">Need hidden elements (or onclick method) with tour ID, selected city and dates to send to the sign up form</p>
-    <button class="btn btn-secondary">Waiting List</button>
-</form>
+<form action="/events/tour/{{tourID}}/waiting-list" method="get" class="d-block text-center">
+        <input name="venue" value="{{venueID}}" hidden>
+        <input name="dates" type="text" id="waiting-list-dates">
+            <button class="btn btn-secondary col-4 m-auto">Waiting List</button>
+    </form>
