--- a/Website (Node and HBS)/views/layouts/main.hbs
+++ b/Website (Node and HBS)/views/layouts/main.hbs
@@ -25,7 +25,9 @@
 <header>
     {{> nav}}
 </header>
-{{{body}}}
+<main class="p-3">
+    {{{body}}}
+</main>
 {{!-- <script type="module" src="/js/helpers.js"></script> --}}
 </body>
 </html>
