--- a/Website (Node and HBS)/public/views/select-seats.hbs
+++ b/Website (Node and HBS)/public/views/select-seats.hbs
@@ -41,7 +41,7 @@
     </form>
 
     <hr  class="mt-3 mb-1">
-    <p class="text-center my-2">No suitable tickets? Sign up for the waiting list to see when more tickets are released:</p>
+    <p class="text-center my-2">No suitable tickets? Sign up for the waiting list to recieve a notification when more tickets are released:</p>
     <form action="/events/tour/{{tourID}}/waiting-list" method="get" class="d-block text-center">
         <input name="venue" value="{{venueID}}" hidden>
             <button class="btn btn-secondary col-4 m-auto">Waiting List</button>
