--- a/Website (Node and HBS)/views/events/events.hbs
+++ b/Website (Node and HBS)/views/events/events.hbs
@@ -1,3 +1,5 @@
+{{#if isAuth}}<h1>Hi {{user.name}}!</h1>{{/if}}
+
 <h2>Upcoming events</h2>
 <p class="note-to-self">maybe have some filters for date and city</p>
 <p class="note-to-self">these could be buttons e.g. today, tomorrow, this weekend, this month, etc...</p>
@@ -9,7 +11,14 @@
             {{this.artist_name}} - {{this.tour_name}}
         </a>
         <span class="d-block">
-            {{formatDate this.firstDate.date "do LLL ''yy"}} to {{formatDate this.lastDate.date "do LLL ''yy"}}
+            {{#if (compareValues (formatDate this.firstDate.date 'yyyy') '==' (formatDate this.lastDate.date 'yyyy'))}}
+                {{formatDate this.firstDate.date "do LLL"}}
+            {{else}}
+                {{formatDate this.firstDate.date "do LLL yyy"}}
+            {{/if}}
+
+            to {{formatDate this.lastDate.date "do LLL yyyy"}}
+
         </span>
     </li>
 {{/each}}
