--- a/Website (Node and HBS)/views/index.hbs
+++ b/Website (Node and HBS)/views/index.hbs
@@ -1,14 +1,34 @@
-<main>
+{{!-- <div class="container-fluid row mx-0 w-100 text-center">
+    <div class="col-4">
+        <h2>How it works</h2>
+    </div>
+    <div class="col-8">
+        <h2>Upcoming Events</h2>
+        <ul class="list-group flex-row">
+            {{#each events}}
+                <li class="m-1 p-2 card">
+                    <a href="events/tour/{{this.tour_id}}">{{this.artist_name}}: {{this.tour_name}}</a>
+                    <span class="d-block">{{formatDate this.firstDate.date "do LLL ''yy"}} to {{formatDate this.lastDate.date "do LLL ''yy"}}</span>
+                </li>
+            {{/each}}
+        </ul>
+    </div>
+</div> --}}
+
+<section class="text-center">
+        <h2>Upcoming Events</h2>
+        <div class="d-flex flex-wrap justify-content-center">
+            {{#each events}}
+                <div class="m-1 card">
+                    <img class="card-img-top" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRJiT-UHSm6w0Jperb8SitpfoAKeMUE3uynPg5YO-2Drw&s" alt="">
+                    <p class="h5 card-title px-3 mb-1 mt-2">{{this.artist_name}}</p>
+                    <a href="events/tour/{{this.tour_id}}" class="stretched-link px-3">{{this.tour_name}}</a>
+                    <p class="d-block mb-0 mt-1 px-3 pb-2">{{formatDate this.firstDate.date "do LLL ''yy"}} to {{formatDate this.lastDate.date "do LLL ''yy"}}</p>
+                </div>
+            {{/each}}
+        </div>
+</section>
+
+<section class="text-center my-3">
     <h2>How it works</h2>
-</main>
-<aside>
-    <h2>Upcoming Events</h2>
-    <ul>
-        {{#each events}}
-            <li>
-                <a href="events/tour/{{this.tour_id}}">{{this.artist_name}}: {{this.tour_name}}</a>
-                <span class="d-block">{{formatDate this.firstDate.date "do LLL ''yy"}} to {{formatDate this.lastDate.date "do LLL ''yy"}}</span>
-            </li>
-        {{/each}}
-    </ul>
-</aside>
+</section>
