--- a/Website (Node and HBS)/views/partials/nav.hbs
+++ b/Website (Node and HBS)/views/partials/nav.hbs
@@ -1,10 +1,31 @@
-<h1><a href="/">Tickets</a></h1>
-<ul>
-    <li><a href="/events">Events</a></li>
-    <li><a href="/account">Account</a></li>
-</ul>
-<form action="/search" method="get">
-    <label for="search"></label>
-    <input type="text" id="search" name="query" placeholder="Search for an artist, city, or tour" required>
-    <button type="submit">Go</button>
-</form>
+<nav class="navbar navbar-dark bg-dark">
+    <div class="container-fluid">
+        <a href="/" class="navbar-header navbar-brand">Tickets</a>
+        <ul class="navbar-nav">
+            <li class="nav-item"><a href="/events" class="nav-link">Events</a></li>
+            <li class="nav-item dropdown btn-group">
+                <a href="/account" class="nav-link">Account</a>
+                <button type="button" class="btn btn-dark dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
+                    <span class="visually-hidden">Toggle Dropdown</span>
+                </button>
+                <ul class="dropdown-menu position-absolute">
+                    {{!-- need to put some logic in here soon - links depend on auth --}}
+                    <li><a class="dropdown-item" href="/account/login">Login</a></li>
+                    <li><a class="dropdown-item" href="/account/register">Register</a></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li>
+                        <form method="POST" action="/account/logout?_method=DELETE"><button type="submit">Logout</button></form>
+                    </li>
+                    <li><a class="dropdown-item" href="#">Logout</a></li>
+                </ul>
+            </li>
+        </ul>
+
+        <form action="/search" method="get" class="d-flex">
+            <input class="form-control mx-2" type="search" id="search" name="query" placeholder="Search for an artist, city, or tour" required>
+            <button type="submit" class="btn btn-outline-light">Go</button>
+        </form>
+    </div>
+
+</nav>
+
