--- a/Website (Node and HBS)/public/styles.css
+++ b/Website (Node and HBS)/public/styles.css
@@ -29,6 +29,15 @@
     transform: scale(1.05);
 } */
 
+.hover-scale:hover {
+    transform: scale(1.05);
+}
+
+
+.hover-scale {
+    transition: transform 0.5s ease-in-out;
+}
+
 .city-card {
     cursor: pointer;
     width: 80%;
@@ -99,8 +108,8 @@ div:hover > #increase-tickets:disabled + p {
 } */
 
 #waiting-list-dates {
-    display: inline-grid;
-    grid-template-columns: auto 1fr;
+    /* display: inline-grid; */
+    grid-template-columns: fit-content(50%) fit-content(50%);
     padding: 10px;
     gap: 10px;
     align-items: center;
