--- a/Website (Node and HBS)/public/views/no-tickets.hbs
+++ b/Website (Node and HBS)/public/views/no-tickets.hbs
@@ -1,7 +1,7 @@
 <h3>No tickets available</h3>
 <p>To be notified when more tickets are available, sign up to the waiting list</p>
-<form action="/events/tour/{{tourID}}/waiting-list" method="get" class="d-block text-center">
-        <input name="venue" value="{{venueID}}" hidden>
-        <input name="dates" type="text" id="waiting-list-dates">
-            <button class="btn btn-secondary col-4 m-auto">Waiting List</button>
-    </form>
+<form action="/events/tour/{{tour_id}}/waiting-list" method="get" class="d-block text-center">
+    <input name="venue" value="{{venue_id}}" hidden>
+    <input name="dates" type="text" id="waiting-list-dates" value="{{date_value}}">
+        <button class="btn btn-secondary col-4 m-auto">Waiting List</button>
+</form>
