--- a/Website (Node and HBS)/views/layouts/main.hbs
+++ b/Website (Node and HBS)/views/layouts/main.hbs
@@ -25,9 +25,9 @@
 <header>
     {{> nav}}
 </header>
-<main class="p-3">
+{{!-- <main class="p-3"> --}}
     {{{body}}}
-</main>
+{{!-- </main> --}}
 {{!-- <script type="module" src="/js/helpers.js"></script> --}}
 </body>
 </html>
