--- a/Website (Node and HBS)/views/search.hbs
+++ b/Website (Node and HBS)/views/search.hbs
@@ -2,3 +2,18 @@
 <p>You searched for: {{ query }}</p>
 <p class="comment"><a href="https://stackoverflow.com/questions/3468812/mysql-query-contains">https://stackoverflow.com/questions/3468812/mysql-query-contains</a></p>
 <p class="comment">This page could be the same as the events page/route just with the query filter applied...</p>
+<p class="comment">This could be done way better: if it matches artist or tour column just return the tour(s), if it matches a city or venue then do the grouping dates thing</p>
+
+{{#each results}}
+    <a href="">
+        <h2>{{this.artist_name}} {{this.tour_name}}</h2>
+        <h3>{{this.venue_name}}, {{this.city}} </h3>
+        <p>
+            {{groupFormatDates this.dates}}
+            {{!-- {{log (groupFormatDates this.dates)}} --}}
+            {{!-- {{#each this.dates}}
+                {{formatDate this "do LLL ''yy"}}{{#unless @last}}, {{/unless}}
+            {{/each}} --}}
+        </p>
+    </a>
+{{/each}}
