Decided not to change it

--- a/Website (Node and HBS)/views/search.hbs
+++ b/Website (Node and HBS)/views/search.hbs
@@ -3,6 +3,7 @@
 <p class="comment"><a href="https://stackoverflow.com/questions/3468812/mysql-query-contains">https://stackoverflow.com/questions/3468812/mysql-query-contains</a></p>
 <p class="comment">This page could be the same as the events page/route just with the query filter applied...</p>
 <p class="comment">This could be done way better: if it matches artist or tour column just return the tour(s), if it matches a city or venue then do the grouping dates thing</p>
+<p class="comment">Eh this'll do</p>
 
 {{#each results}}
     <a href="">
